Update 'go-sjhubkam' component image to: quay.io/rhtap_qe/go-sjhubkam:aac57f03c753915c2b2419b5a67adc6f4e0f9241@sha256:bca5a041fecf67fcb9fcc946d28cabcc4b1b015d7bc58d715113b34fbd104598

--- a/components/go-sjhubkam/overlays/development/deployment-patch.yaml
+++ b/components/go-sjhubkam/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-sjhubkam
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-sjhubkam:aac57f03c753915c2b2419b5a67adc6f4e0f9241@sha256:bca5a041fecf67fcb9fcc946d28cabcc4b1b015d7bc58d715113b34fbd104598
+          name: container-image
